[package]
name = "polipo"
description = "🐙 Minimal, elegant, fast, async Kraken exchange REST API client | Written in Rust"
version = "0.2.5"
authors = ["Matteo Pisani <matteo.pisani.91@gmail.com>"]
license = "MIT"
repository = "https://github.com/xonoxitron/polipo"
documentation = "https://docs.rs/polipo/"
keywords = ["rust", "kraken", "exchange", "api", "cryptocurrency"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = {version = "0.13.0"}
hmac = {version = "0.10.1"}
reqwest = {version = "0.11.1"}
sha2 = {version = "0.9.3"}
tokio = {version = "1.2.0", features = ["full"]}
